--- a/Task2-T1-T2-mapping.css
+++ b/Task2-T1-T2-mapping.css
@@ -7,9 +7,9 @@
 }
 
 .u-section-1 .u-image-1 {
-  height: 494px;
-  margin-top: 0;
-  margin-bottom: 40px;
+  height: 455px;
+  margin-top: 28px;
+  margin-bottom: 51px;
 }.u-section-2 .u-sheet-1 {
   min-height: 327px;
 }
@@ -21,44 +21,55 @@
 .u-section-2 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
-  line-height: 1.8;
-  margin: 0 0 40px;
+  margin: 1px 0 39px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-2 {
+    line-height: 2;
+  }
 }.u-section-3 .u-sheet-1 {
-  min-height: 745px;
+  min-height: 1424px;
 }
 
 .u-section-3 .u-text-1 {
-  margin: -11px auto 0 0;
+  margin: -30px auto 0 0;
 }
 
 .u-section-3 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
-  line-height: 1.8;
+  line-height: 2;
   margin: 0;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  font-size: 1rem;
+  padding: 0;
 }
 
 .u-section-3 .u-image-1 {
   width: 284px;
   height: 37px;
-  margin: -193px auto 0;
+  margin: -2272px auto 0;
 }
 
 .u-section-3 .u-image-2 {
   width: 273px;
   height: 37px;
-  margin: -151px auto 0;
+  margin: -158px auto 0;
 }
 
 .u-section-3 .u-image-3 {
   width: 211px;
   height: 48px;
-  margin: 164px auto 60px;
+  margin: 293px auto 2015px;
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-text-1 {
-    margin-top: 71px;
+    margin-top: 325px;
   }
 
   .u-section-3 .u-image-1 {
@@ -98,7 +109,7 @@
 .u-section-5 .u-text-2 {
   font-weight: 400;
   font-size: 1rem;
-  line-height: 1.8;
+  line-height: 2;
   margin: 0 20px 0 0;
 }
 
